--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -144,3 +144,94 @@ body {
   border: 1px dashed #abc;
   margin: 5px 45px 5px 5px;
 }
+
+// Transition presets
+// Transition presets
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+.fade-enter-active,
+.fade-leave-active {
+  transition: 0.5s;
+}
+
+.slide-enter {
+  opacity: 0;
+  transform: scale3d(2, 0.5, 1) translate3d(400px, 0, 0);
+}
+
+.slide-enter-to {
+  transform: scale3d(1, 1, 1);
+}
+.slide-enter-active,
+.slide-leave-active {
+  transition: 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.slide-leave {
+  transform: scale3d(1, 1, 1);
+}
+
+.slide-leave-to {
+  opacity: 0;
+  transform: scale3d(2, 0.5, 1) translate3d(-400px, 0, 0);
+}
+
+.rotate-enter {
+  transform: perspective(500px) rotate3d(0, 1, 0, 90deg);
+}
+.rotate-enter-active,
+.rotate-leave-active {
+  transition: 0.5s;
+}
+.rotate-leave-to {
+  transform: perspective(500px) rotate3d(0, 1, 0, -90deg);
+}
+
+.slide-right-enter-active,
+.slide-right-leave-active,
+.slide-left-enter-active,
+.slide-left-leave-active {
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease;
+}
+
+.slide-right-enter-active,
+.slide-left-enter-active {
+  transition-delay: 0.5s;
+}
+
+.slide-left-enter {
+  opacity: 0;
+  transform: translateX(-300px);
+}
+.slide-left-enter-to {
+  opacity: 1;
+  transform: translateX(0px);
+}
+.slide-left-leave {
+  opacity: 1;
+  transform: translateX(0px);
+}
+
+.slide-left-leave-to {
+  opacity: 0;
+  transform: translateX(-300px);
+}
+
+.slide-right-enter {
+  opacity: 0;
+  transform: translateX(300px);
+}
+.slide-right-enter-to {
+  opacity: 1;
+  transform: translateX(0px);
+}
+.slide-right-leave {
+  opacity: 1;
+  transform: translateX(0px);
+}
+
+.slide-right-leave-to {
+  opacity: 0;
+  transform: translateX(300px);
+}
