--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -8,7 +8,7 @@ $dark: #1d1d1d;
 $positive: #21ba45;
 $negative: #c10015;
 
-$info: #384f81;
+$info: #58637a;
 $warning: #f2c037;
 
 // Project specific colors
