--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -138,3 +138,14 @@ body {
 .cropper-face {
   border-radius: 50%;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
