Changed padding-top to fix q-page-container

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -9,6 +9,9 @@ body {
   font-size: 1.6rem;
 }
 
+.q-page-container {
+  padding-top: 41px !important;
+}
 .row {
   // max-width: 114rem;
   margin: 0;
